@startuml
skinparam classAttributeIconSize 0
class FinanceTools {
 String filepath
 +handleStorage(:CommandPacket, :String, :ArrayList<String>)
}

class Storage {
 +handInfoStorage(:String, :ArrayList<String>)
}

class FileStorage {
 +updateFile(:String, :ArrayList<String>)
}

FinanceTools --> Storage : Stores account information >
Storage --> FileStorage : Stores account information into txt >
@enduml